Imagem e links adicionados

--- a/Portifólio 1- ALURA/index.html
+++ b/Portifólio 1- ALURA/index.html
@@ -21,8 +21,8 @@
                 Olá! Sou <strong>Vanilson Sousa</strong>, desenvolvedor Front-end com experiências em HTML e CSS, além de estar em processo de estudo e prática de JavaScript voltado para o Front-end. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?
             </p>
             <div class="apresentacao__link">
-                <a class="apresentacao__link__a" href="#" target="_blank">Instagram</a>
-                <a class="apresentacao__link__a" href="#" target="_blank">GitHub</a>
+                <a class="apresentacao__link__a" href="https://www.instagram.com/vanilson.cs11/" target="_blank">Instagram</a>
+                <a class="apresentacao__link__a" href="https://github.com/Vanilson11" target="_blank">GitHub</a>
             </div>
         </section>
         <img src="Eu lindo.jpg" alt="Foto do Vanilson Sousa">
