Atualizações no layout

--- a/Portifólio 1- ALURA/index.html
+++ b/Portifólio 1- ALURA/index.html
@@ -21,6 +21,7 @@
                 Olá! Sou <strong>Vanilson Sousa</strong>, desenvolvedor Front-end com experiências em HTML e CSS, além de estar em processo de estudo e prática de JavaScript voltado para o Front-end. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?
             </p>
             <div class="apresentacao__link">
+                <h2 class="apresentacao__link__subtitle">Acesse minhas redes</h2>
                 <a class="apresentacao__link__a" href="https://www.instagram.com/vanilson.cs11/" target="_blank">Instagram</a>
                 <a class="apresentacao__link__a" href="https://github.com/Vanilson11" target="_blank">GitHub</a>
             </div>
