Atualizações de Footer e Header

--- a/Portifólio 1- ALURA/index.html
+++ b/Portifólio 1- ALURA/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <header class="cabecalho">
-        <a class="cabecalho__links" href="#">Home</a>
-        <a class="cabecalho__links" href="#">Sobre mim</a>
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__links" href="#">Home</a>
+            <a class="cabecalho__menu__links" href="#">Sobre mim</a>
+        </nav>
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
@@ -22,11 +24,18 @@
             </p>
             <div class="apresentacao__link">
                 <h2 class="apresentacao__link__subtitle">Acesse minhas redes</h2>
-                <a class="apresentacao__link__a" href="https://www.instagram.com/vanilson.cs11/" target="_blank">Instagram</a>
-                <a class="apresentacao__link__a" href="https://github.com/Vanilson11" target="_blank">GitHub</a>
+                <a class="apresentacao__link__a" href="https://www.instagram.com/vanilson.cs11/" target="_blank">
+                    <img src="assets/instagram.png" alt="Logo Instagram"> Instagram
+                </a>
+                <a class="apresentacao__link__a" href="https://github.com/Vanilson11" target="_blank">
+                   <img src="assets/github.png" alt="Logo GitHub"> GitHub
+                </a>
             </div>
         </section>
         <img src="Eu lindo.jpg" alt="Foto do Vanilson Sousa">
     </main>
+    <footer class="rodape">
+        <p>Desenvolvido por <a href="https://www.instagram.com/vanilson.cs11/">Vanilson Sousa</a></p>
+    </footer>
 </body>
 </html>
