Página de Currículo Adicionada

--- a/Portifólio 1- ALURA/index.html
+++ b/Portifólio 1- ALURA/index.html
@@ -12,6 +12,7 @@
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__links" href="index.html">Home</a>
             <a class="cabecalho__menu__links" href="about.html">Sobre mim</a>
+            <a class="cabecalho__menu__links" href="curriculo.html">Currículo</a>
         </nav>
     </header>
     <main class="apresentacao">
@@ -35,7 +36,7 @@
         <img src="Eu lindo.jpg" alt="Foto do Vanilson Sousa">
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por <a href="https://www.instagram.com/vanilson.cs11/">Vanilson Sousa</a></p>
+        <p>Desenvolvido por <a class="rodape__link" href="https://www.instagram.com/vanilson.cs11/">Vanilson Sousa</a></p>
     </footer>
 </body>
 </html>
