--- a/desafio-aniversario/index.html
+++ b/desafio-aniversario/index.html
@@ -20,34 +20,39 @@
         <section class="apresentacao__conteudo">
             <div class="apresentacao__conteudo__msg">
                 <h2 class="apresentacao__conteudo__title0">Essa página é um presente para você: Feliz Aniversário!</h2>
-                <img src="#" alt="Foto Aniversário">
+                <img class="apresentacao__conteudo__foto0" src="imagens/foto0.jpg" alt="Foto Aniversário">
             </div>
 
             <div class="apresentacao__conteudo__carta">
-                <h2 class="apresentacao__conteudo__title">Uma carta para você</h2>
+                <h2 class="apresentacao__conteudo__title1">Uma carta para você</h2>
 
                 <p class="apresentacao__conteudo__txt">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eum totam commodi obcaecati, porro officiis aliquid dolor, reiciendis consequuntur quos necessitatibus dolorem et nobis! Libero suscipit earum voluptate aliquam asperiores.
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit doloremque quaerat reiciendis tenetur, eum, facilis, dignissimos magni eius eos esse facere dolorum perspiciatis quis error quibusdam ea saepe dolores eligendi.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae id repudiandae architecto obcaecati sequi ea quae voluptatibus amet, dolorum, ipsa magni doloremque pariatur saepe cum quia. Placeat eum sunt reiciendis.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo cum voluptates praesentium? Labore, asperiores consectetur, corrupti modi tenetur velit sed rerum cupiditate esse ullam eaque laboriosam amet quas molestias neque?
                 </p>
             </div>
 
             <div class="apresentacao__conteudo__galeria">
-                <h2 class="apresentacao__conteudo__title">Uma carta para você</h2>
+                <h2 class="apresentacao__conteudo__title1">Nossas Fotos</h2>
                 <figure class="conteudo__galeria__fotos">
-                    <img src="" alt="" class="galeria__fotos">
-                    <img src="" alt="" class="galeria__fotos">
-                    <img src="" alt="" class="galeria__fotos">
-                    <img src="" alt="" class="galeria__fotos">
-                    <img src="" alt="" class="galeria__fotos">
-                    <img src="" alt="" class="galeria__fotos">
+                    <img src="imagens/foto1.jpg" alt="Foto de Aniversário" class="galeria__fotos">
+                    <img src="imagens/foto2.jpg" alt="Foto de Aniversário" class="galeria__fotos">
+                    <img src="imagens/foto3.jpg" alt="Foto de Aniversário" class="galeria__fotos">
+                    <img src="imagens/foto4.jpg" alt="Foto de Aniversário" class="galeria__fotos">
+                    <img src="imagens/foto5.jpg" alt="Foto de Aniversário" class="galeria__fotos">
+                    <img src="imagens/foto6.jpg" alt="Foto de Aniversário" class="galeria__fotos">
                 </figure>
             </div>
         </section>
     </main>
 
     <footer class="rodape">
-
+        <p class="rodape__txt">
+            Desenvolvido por <a href="https://github.com/Vanilson11" class="rodape__link" target="_blank">Vanilson Sousa</a>
+        </p>
+        <p class="rodape__txt">Feito em 26/03/2023</p>
     </footer>
 </body>
 </html>
