Substituição de fotos

--- a/desafio-aniversario/index.html
+++ b/desafio-aniversario/index.html
@@ -20,7 +20,7 @@
         <section class="apresentacao__conteudo">
             <div class="apresentacao__conteudo__msg">
                 <h2 class="apresentacao__conteudo__title0">Essa página é um presente para você: Feliz Aniversário!</h2>
-                <img class="apresentacao__conteudo__foto0" src="imagens/foto0.jpg" alt="Foto Aniversário">
+                <img class="apresentacao__conteudo__foto0" src="imagens/Happiness-bro.png" alt="Foto Aniversário">
             </div>
 
             <div class="apresentacao__conteudo__carta">
@@ -37,12 +37,12 @@
             <div class="apresentacao__conteudo__galeria">
                 <h2 class="apresentacao__conteudo__title1">Nossas Fotos</h2>
                 <figure class="conteudo__galeria__fotos">
-                    <img src="imagens/foto1.jpg" alt="Foto de Aniversário" class="galeria__fotos">
-                    <img src="imagens/foto2.jpg" alt="Foto de Aniversário" class="galeria__fotos">
-                    <img src="imagens/foto3.jpg" alt="Foto de Aniversário" class="galeria__fotos">
-                    <img src="imagens/foto4.jpg" alt="Foto de Aniversário" class="galeria__fotos">
-                    <img src="imagens/foto5.jpg" alt="Foto de Aniversário" class="galeria__fotos">
-                    <img src="imagens/foto6.jpg" alt="Foto de Aniversário" class="galeria__fotos">
+                    <img src="imagens/foto1.png" alt="Foto de Aniversário" class="galeria__fotos">
+                    <img src="imagens/foto2.png" alt="Foto de Aniversário" class="galeria__fotos">
+                    <img src="imagens/foto3.png" alt="Foto de Aniversário" class="galeria__fotos">
+                    <img src="imagens/foto4.png" alt="Foto de Aniversário" class="galeria__fotos">
+                    <img src="imagens/foto5.png" alt="Foto de Aniversário" class="galeria__fotos">
+                    <img src="imagens/foto6.png" alt="Foto de Aniversário" class="galeria__fotos">
                 </figure>
             </div>
         </section>
