--- a/desafio-filmes/index.html
+++ b/desafio-filmes/index.html
@@ -20,20 +20,20 @@
 
     <main class="principal">
         <figure class="principal__galeria">
-            <img src="#" alt="Capa do filme" class="principal__galeria__fotos">
-            <img src="#" alt="Capa do filme" class="principal__galeria__fotos">
-            <img src="#" alt="Capa do filme" class="principal__galeria__fotos">
-            <img src="#" alt="Capa do filme" class="principal__galeria__fotos">
-            <img src="#" alt="Capa do filme" class="principal__galeria__fotos">
-            <img src="#" alt="Capa do filme" class="principal__galeria__fotos">
-            <img src="#" alt="Capa do filme" class="principal__galeria__fotos">
-            <img src="#" alt="Capa do filme" class="principal__galeria__fotos">
-            <img src="#" alt="Capa do filme" class="principal__galeria__fotos">
-            <img src="#" alt="Capa do filme" class="principal__galeria__fotos">
-            <img src="#" alt="Capa do filme" class="principal__galeria__fotos">
-            <img src="#" alt="Capa do filme" class="principal__galeria__fotos">
-            <img src="#" alt="Capa do filme" class="principal__galeria__fotos">
-            <img src="#" alt="Capa do filme" class="principal__galeria__fotos">
+            <img src="imagens/filme0.JPG" alt="Capa do filme" class="principal__galeria__fotos">
+            <img src="imagens/filme1.jpeg" alt="Capa do filme" class="principal__galeria__fotos">
+            <img src="imagens/filme-2.jpg" alt="Capa do filme" class="principal__galeria__fotos">
+            <img src="imagens/filme3.jpg" alt="Capa do filme" class="principal__galeria__fotos">
+            <img src="imagens/filme4.JPG" alt="Capa do filme" class="principal__galeria__fotos">
+            <img src="imagens/filme5.JPG" alt="Capa do filme" class="principal__galeria__fotos">
+            <img src="imagens/filme6.JPG" alt="Capa do filme" class="principal__galeria__fotos">
+            <img src="imagens/filme7.JPG" alt="Capa do filme" class="principal__galeria__fotos">
+            <img src="imagens/filme8.JPG" alt="Capa do filme" class="principal__galeria__fotos">
+            <img src="imagens/filme9.JPG" alt="Capa do filme" class="principal__galeria__fotos">
+            <img src="imagens/filme10.JPG" alt="Capa do filme" class="principal__galeria__fotos">
+            <img src="imagens/filme11.JPG" alt="Capa do filme" class="principal__galeria__fotos">
+            <img src="imagens/filme12.JPG" alt="Capa do filme" class="principal__galeria__fotos">
+            <img src="imagens/filme13.JPG" alt="Capa do filme" class="principal__galeria__fotos">
         </figure>
     </main>
 </body>
