atualização das unidades de medida

--- a/Portifólio 1- ALURA/index.html
+++ b/Portifólio 1- ALURA/index.html
@@ -25,10 +25,10 @@
             </p>
             <div class="apresentacao__link">
                 <h2 class="apresentacao__link__subtitle">Acesse minhas redes</h2>
-                <a class="apresentacao__link__a" href="https://www.instagram.com/vanilson.cs11/" target="_blank">
+                <a class="apresentacao__link__navegacao" href="https://www.instagram.com/vanilson.cs11/" target="_blank">
                     <img src="assets/instagram.png" alt="Logo Instagram"> Instagram
                 </a>
-                <a class="apresentacao__link__a" href="https://github.com/Vanilson11" target="_blank">
+                <a class="apresentacao__link__navegacao" href="https://github.com/Vanilson11" target="_blank">
                    <img src="assets/github.png" alt="Logo GitHub"> GitHub
                 </a>
             </div>
